# fuzz-binary-protocol

./: CMakeLists.txt  README.md
include/: fuzzer.h  mutator.h  protocol.h
src/: fuzzer.cpp  main.cpp  mutator.cpp  protocol.cpp
tests/: test_fuzzer.cpp
